<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/if_satelite_1936917"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_title"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintTop_toBottomOf="@id/login_image"
        app:layout_constraintBottom_toTopOf="@id/login_frame_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_frame_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <TextView
            android:id="@+id/login_temp_bar1"
            android:layout_width="@dimen/login_bar_width"
            android:layout_height="@dimen/login_bar_height"
            android:text="@string/login_kakaotalk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/login_kakao_front"
            android:background="@color/login_kakao_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_temp_bar2"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/login_temp_bar2"
            android:layout_width="@dimen/login_bar_width"
            android:layout_height="@dimen/login_bar_height"
            android:text="@string/login_facebook"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/login_facebook_front"
            android:background="@color/login_facebook_back"
            app:layout_constraintTop_toBottomOf="@id/login_temp_bar1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_temp_bar3"
            android:visibility="invisible"/>


        <TextView
            android:id="@+id/login_temp_bar3"
            android:layout_width="@dimen/login_bar_width"
            android:layout_height="@dimen/login_bar_height"
            android:text="@string/login_email"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorAccentLight"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/login_temp_bar2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/login_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_id"
            android:textSize="@dimen/text_size_middle"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_pw_text"
            app:layout_constraintRight_toLeftOf="@id/login_id"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/login_id"
            android:layout_width="@dimen/login_id_w"
            android:layout_height="@dimen/login_id_h"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_pw"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/login_id_text"
            android:visibility="visible"

            />

        <TextView
            android:id="@+id/login_pw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_pw"
            android:textSize="@dimen/text_size_middle"
            app:layout_constraintTop_toBottomOf="@id/login_id_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_pw"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/login_pw"
            android:layout_width="@dimen/login_pw_w"
            android:layout_height="@dimen/login_pw_h"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/login_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/login_pw_text"
            android:visibility="visible"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/login_btn_w"
        android:layout_height="@dimen/login_btn_h"
        android:text="@string/login_btn_text"
        android:onClick="loginButton"
        app:layout_constraintTop_toBottomOf="@id/login_frame_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="visible"/>


</androidx.constraintlayout.widget.ConstraintLayout>